--- a/.github/workflows/build-compiler.yml
+++ b/.github/workflows/build-compiler.yml
@@ -2,7 +2,7 @@ name: Build compiler executable
 on: [push, pull_request]
 
 jobs:
-  deploy:
+  build:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
@@ -16,4 +16,4 @@ jobs:
       run: pip install .
 
     - name: Search for executable path
-      run: where cpq.exe
+      run: where.exe cpq
