--- a/.github/workflows/build-compiler.yml
+++ b/.github/workflows/build-compiler.yml
@@ -6,9 +6,9 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu, windows]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -35,5 +35,5 @@ jobs:
       uses: actions/upload-artifact@v4
 
       with:
-        name: compiler
+        name: cpl-to-quad-compiler-${{ matrix.os }}
         path: dist
