--- a/.github/workflows/test-compiler.yml
+++ b/.github/workflows/test-compiler.yml
@@ -19,8 +19,8 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install the compiler package
-      run: pip install .
+    - name: Install the compiler package and pytest deps
+      run: pip install . pytest
 
     - name: Run pytest
       uses: pavelzw/pytest-action@v2
